<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPet"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/toHomePage2"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:padding="20dp"
                    android:id="@+id/addPetPageInside">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addinfos"
                        android:textSize="23sp"
                        android:textColor="@color/light_orange"
                        android:fontFamily="@font/cabin"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:src="@drawable/add_pet"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="35dp"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:text="Selectati tipul de animal"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"/>

                    <Spinner
                        android:id="@+id/add_pettype"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/edittext_background"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:contextClickable="true"/>

                    <EditText
                        android:id="@+id/add_petname"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_background"
                        android:drawableLeft="@drawable/pet_name_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/pet_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:textColorHint="@color/light_orange"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/add_petage"
                        android:layout_marginTop="5dp"
                        android:padding="8dp"
                        android:hint="@string/age"
                        android:drawableLeft="@drawable/pet_age_icon"
                        android:drawablePadding="8dp"
                        android:background="@drawable/edittext_background"
                        android:inputType="text"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:textColorHint="@color/light_orange"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/add_petweight"
                        android:layout_marginTop="5dp"
                        android:padding="8dp"
                        android:hint="@string/weight"
                        android:drawableLeft="@drawable/pet_weight_icon"
                        android:drawablePadding="8dp"
                        android:background="@drawable/edittext_background"
                        android:inputType="text"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:textColorHint="@color/light_orange"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/add_petrfid"
                        android:layout_marginTop="5dp"
                        android:padding="8dp"
                        android:hint="@string/rfid"
                        android:drawableLeft="@drawable/rfid_icon"
                        android:drawablePadding="8dp"
                        android:background="@drawable/edittext_background"
                        android:inputType="text"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:textColorHint="@color/light_orange"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/add_race"
                        android:layout_marginTop="5dp"
                        android:padding="8dp"
                        android:hint="@string/race"
                        android:drawableLeft="@drawable/pet_name_icon"
                        android:drawablePadding="8dp"
                        android:background="@drawable/edittext_background"
                        android:inputType="text"
                        android:fontFamily="@font/cabin"
                        android:textColor="@color/light_orange"
                        android:textColorHint="@color/light_orange"/>

                    <Button
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:id="@+id/insert_pet_btn"
                        android:text="@string/add"
                        app:cornerRadius = "30dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/cabin"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

</LinearLayout>