<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/white">

    <ImageView
        android:id="@+id/helloImg"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:src="@drawable/home_page_img"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/cabin"
        android:text="@string/hello"
        android:textColor="@color/light_orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    </LinearLayout>-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addPet"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/add_pet_background"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="151dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/addpet"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:src="@drawable/addpet" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/seePets"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/see_pets_background"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="151dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/seepets"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:src="@drawable/seepets" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/guide"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/guide_background"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="156dp"
                        android:layout_height="79dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/guide"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:src="@drawable/guide" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logoutOption"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/logout_background"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="156dp"
                        android:layout_height="79dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="22dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/logout1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="115dp"
                    android:src="@drawable/logout" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>